@startuml
' Simple ER-style diagram for schema.sql
hide circle
skinparam linetype ortho

entity "User" as U {
  * id : SERIAL <<PK>>
  --
  name : VARCHAR(255)
  email : VARCHAR(255) <<UNIQUE>>
  hash_pass : VARCHAR(128)
  is_teacher : BOOLEAN
}

entity "Course" as C {
  * id : SERIAL <<PK>>
  --
  teacherID : INT <<FK User.id>>
  name : VARCHAR(255)
}

entity "Assignment" as A {
  * id : SERIAL <<PK>>
  --
  courseID : INT <<FK Course.id>>
  name : VARCHAR(255)
  rubric : VARCHAR(255)
  description : TEXT
  start_date : TIMESTAMP
  due_date : TIMESTAMP
  is_anonymous : BOOLEAN <<default TRUE>>
  individual_reviews : BOOLEAN <<default TRUE>>
  group_reviews : BOOLEAN <<default TRUE>>
}

entity "CourseGroup" as CG {
  * id : SERIAL <<PK>>
  --
  name : VARCHAR(255)
  courseID : INT <<FK Course.id>>
}

entity "Submission" as S {
  * id : SERIAL <<PK>>
  --
  path : VARCHAR(255)
  studentID : INT <<FK User.id>>
  assignmentID : INT <<FK Assignment.id>>
}

entity "Group_Members" as GM {
  * (userID, groupID) <<PK>>
  --
  groupID : INT <<FK CourseGroup.id>>
  userID  : INT <<FK User.id>>
}

entity "User_Courses" as UC {
  * (userID, courseID) <<PK>>
  --
  courseID : INT <<FK Course.id>>
  userID   : INT <<FK User.id>>
}

entity "Review" as R {
  * id : SERIAL <<PK>>
  --
  assignmentID : INT <<FK Assignment.id>>
  reviewerID   : INT <<FK User.id>>
  revieweeID   : INT (polymorphic, no FK)
  review_type  : VARCHAR(20) <<default 'individual'>>
  comments     : VARCHAR(500)
}

entity "Criterion" as CR {
  * id : SERIAL <<PK>>
  --
  reviewID : INT <<FK Review.id>>
  criterionRowID : INT <<FK Criteria_Description.id>>
  grade : INT
  comments : VARCHAR(255)
}

entity "Rubric" as RB {
  * id : SERIAL <<PK>>
  --
  assignmentID : INT <<FK Assignment.id>>
  canComment : BOOLEAN
  rubric_type : VARCHAR(20) <<default 'individual'>>
}

entity "Criteria_Description" as CD {
  * id : SERIAL <<PK>>
  --
  rubricID : INT <<FK Rubric.id>>
  question : VARCHAR(255)
  scoreMax : INT
  hasScore : BOOLEAN
}

entity "GradeOverride" as GO {
  * id : SERIAL <<PK>>
  --
  studentID : INT <<FK User.id>>
  assignmentID : INT <<FK Assignment.id>>
  courseID : INT <<FK Course.id>>
  override_score : FLOAT
  teacherID : INT <<FK User.id>>
  UNIQUE(studentID, assignmentID, courseID)
}

' Relationships (FK -> PK)
U ||--o{ C    : teaches (teacherID)
C ||--o{ A    : has (courseID)
C ||--o{ CG   : has (courseID)
A ||--o{ S    : has (assignmentID)
U ||--o{ S    : submits (studentID)

CG ||--o{ GM  : contains (groupID)
U ||--o{ GM   : member (userID)

C ||--o{ UC  : enrollment (courseID)
U ||--o{ UC  : enrolled (userID)

A ||--o{ R   : has (assignmentID)
U ||--o{ R   : reviewer (reviewerID)
U ..o{ R    : reviewee (individual)
CG ..o{ R   : reviewee (group)

R ||--o{ CR  : contains (reviewID)
CD ||--o{ CR : referenced_by (criterionRowID)

A ||--o{ RB  : may_have (assignmentID)
RB ||--o{ CD : describes (rubricID)

U ||--o{ GO  : overrides_for (studentID)
A ||--o{ GO  : overrides_on (assignmentID)
C ||--o{ GO  : overrides_in (courseID)
U ||--o{ GO  : set_by (teacherID)

@enduml